[gd_scene load_steps=8 format=3 uid="uid://brf7n2t0qfxne"]

[ext_resource type="Script" uid="uid://cl1e75tsqg3ml" path="res://scripts/end_screen.gd" id="1_jc7ji"]
[ext_resource type="FontFile" uid="uid://buforasuda0kd" path="res://assets/fonts/PixelOperator8.ttf" id="1_kq7ac"]
[ext_resource type="FontFile" uid="uid://xi4qw02ujuf7" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_87vmq"]
[ext_resource type="Texture2D" uid="uid://cegbgosc71ctp" path="res://assets/sprites/Samurai/SamuraiNewAttack/SamuraiRevisedAttack-Sheet.png" id="4_87vmq"]
[ext_resource type="AudioStream" uid="uid://dl8cs5bjb2mbj" path="res://assets/sound/SFX/SamuraiWinScreen.wav" id="5_g44xs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g44xs"]
atlas = ExtResource("4_87vmq")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vj8vg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g44xs")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_jc7ji")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -39.0
offset_top = -14.0
offset_right = 1196.0
offset_bottom = 702.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
offset_left = 38.0
offset_top = 22.0
offset_right = 603.0
offset_bottom = 404.0
theme_override_fonts/font = ExtResource("1_kq7ac")
theme_override_font_sizes/font_size = 24
text = "Phew! Are you alright?!
That was a lot that happened
there...

But you did it.

You really came through.
You have proven yourself that you are...
and will always be..."
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label3" type="Label" parent="."]
offset_left = -260.0
offset_top = 394.0
offset_right = 892.0
offset_bottom = 426.0
theme_override_fonts/font = ExtResource("1_kq7ac")
theme_override_font_sizes/font_size = 32
text = "['x'/UP to continue]"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label2" type="Label" parent="."]
offset_left = -250.0
offset_top = 312.0
offset_right = 902.0
offset_bottom = 376.0
theme_override_fonts/font = ExtResource("3_87vmq")
theme_override_font_sizes/font_size = 32
text = "THE SAMURAI MASTER"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label4" type="Label" parent="."]
visible = false
offset_left = -49.0
offset_top = 19.0
offset_right = 683.0
offset_bottom = 331.0
theme_override_fonts/font = ExtResource("1_kq7ac")
theme_override_font_sizes/font_size = 26
text = "Thanks for playing! :)
This game was a lot of fun to
make, and I really enjoyed
making it! I hope you enjoyed
playing, and while this is one
of my first projects, this is
only the beginning, and
there's definitely more to
come! Cheers!"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label5" type="Label" parent="."]
visible = false
offset_left = -14.0
offset_top = 323.0
offset_right = 762.0
offset_bottom = 387.0
theme_override_fonts/font = ExtResource("1_kq7ac")
theme_override_font_sizes/font_size = 40
text = "-yeet_boi_1010"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Label6" type="Label" parent="."]
visible = false
offset_left = -45.0
offset_top = 408.0
offset_right = 311.0
offset_bottom = 507.0
theme_override_fonts/font = ExtResource("1_kq7ac")
theme_override_font_sizes/font_size = 24
text = "'R'/ Y to restart
'Q'/ B to quit"
horizontal_alignment = 1
autowrap_mode = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(83, 336)
rotation = -0.209536
scale = Vector2(3.42393, 3.42393)
sprite_frames = SubResource("SpriteFrames_vj8vg")

[node name="EndScreenMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_g44xs")
bus = &"GameOver"
